<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="academia.com.br.academia.CadastroUsuarioActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:background="#00FF00"
        android:layout_alignParentStart="true">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:background="#EEE8AA"
            android:id="@+id/editTextNovoNome"
            android:layout_below="@+id/textViewNovoNome"
            android:layout_alignLeft="@+id/editTextSenha"
            android:layout_alignStart="@+id/editTextSenha"
            android:layout_alignRight="@+id/editTextSenha"
            android:layout_alignEnd="@+id/editTextSenha" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nome"
            android:id="@+id/textViewNovoNome"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="35dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:inputType="textPassword"
            android:background="#EEE8AA"
            android:ems="10"
            android:id="@+id/editTextSenha"
            android:layout_below="@+id/textViewNovaSenha"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/senha_c"
            android:id="@+id/textViewNovaSenha"
            android:layout_below="@+id/editTextNovoNome"
            android:layout_alignLeft="@+id/textViewNovoNome"
            android:layout_alignStart="@+id/textViewNovoNome"
            android:layout_marginTop="37dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/redigite_senha"
            android:id="@+id/textViewRedigiteSenha"
            android:layout_marginTop="32dp"
            android:layout_below="@+id/editTextSenha"
            android:layout_alignRight="@+id/textViewNovaSenha"
            android:layout_alignEnd="@+id/textViewNovaSenha" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:inputType="textPassword"
            android:background="#EEE8AA"
            android:ems="10"
            android:id="@+id/editTextRedigiteSenha"
            android:layout_below="@+id/textViewRedigiteSenha"
            android:layout_alignLeft="@+id/editTextSenha"
            android:layout_alignStart="@+id/editTextSenha" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_cadastro"
            android:id="@+id/buttonNovoCadastro"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="33dp" />
    </RelativeLayout>

</RelativeLayout>
